--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "nodemailer": "^6.10.0",
     "ws": "^8.2.3"
   },
   "engines": {
